# egg-herbie-new

./: Cargo.toml  README.md  rules.json  test.sh
inputs/: 00.json  01.json  02.json  03.json
src/: main.rs  math.rs
