[package]
name = "egg-herbie-new"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"

[dependencies]
num-bigint = "0.2"
num-rational = "0.2"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = { version = "0.7", default-features = false }

[dependencies.egg]
# path = "../egg"
# version = "0.4"
git = "https://github.com/mwillsey/egg"
rev = "986bff5c7d2e050e9aa980671c4c7d971c07da6f"
features = ["serde-1"]
